修改电影选座代码和统一网络请求的host

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -286,7 +286,7 @@
                     <div class="user-info">
                         <div class="head-portrait">
                             <a href="#">
-                                <img src="https://img.meituan.net/avatar/e9b04d1435a7434a3dd8bed33b02cf636155.jpg" />
+                                <img src="../images/logintouxiang.jpg" />
                             </a>
                         </div>
                         <div class="nickname">
@@ -831,6 +831,7 @@
                 </div>
             </div>
         </footer>
+        <script src="../js/base.js"></script>
 </body>
 
 </html>
